--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
 </head>
 <body>
 	<main class="container">
-		<h1>TagSelect Demo</h1>
-
+		<hgroup>
+			<h1>TagSelect Demo</h1>
+			<a href="https://github.com/Yohn/PicoCSS-Tag-Select"><h3 style="color:var(--pico-primary)">Like this on Github!</h3></a>
+		</hgroup>
 		<article>
 			<header><h2>Basic Example</h2></header>
 			<div class="demo-container">
